@@ -60,11 +60,6 @@ footer {
   margin-top:40px;
 }
 
-.copyright {
-	text-align:center;
-	padding-bottom:10px;
-}
-
 
 /* ------------------ PANELS ------------------- */
 
