@@ -225,8 +225,23 @@ In id suscipit elit.</code></pre>
 
 </div>
 
-<footer>
-<p class="copyright">CC BY-SA Kazhnuz</p>
+<footer class="container">
+
+
+  <div class="row">
+    <div class="col-md-4">
+      <p>Ce theme est diffusé sous licence <strong>Creative Common Attribution - Partage à l'Identique 4.0</strong> - hors mention contraire.</p>
+      <p>Cette licence vous autorise à partager et copier mes travaux, tant que vous me citiez en source, et que vous autorisez la même chose pour les travaux qui en seraient dérivés. N'hésitez pas à partager ! <i style="color:#FF0000" class="fa fa-heart"></i></p>
+    </div>
+
+    <div class="col-md-4">
+      <p>Theme réalisé avec le quadriciel <a href="https://getbootstrap.com/">Bootstrap4</a> et la banque d'icone <a href="https://forkawesome.github.io/Fork-Awesome/">Fork-Awesome</a>.</p>
+    </div>
+
+    <div class="col-md-4">
+      <p>Lorem Ipsum.</p>
+    </div>
+  </div>
 </footer>
 
 
